@@ -9,10 +9,11 @@ GTK_LIBS = $(shell pkg-config --libs gtkmm-2.4)
 PTH_LIBS = -lpthread
 XML_FLAGS = $(shell pkg-config --cflags libxml-2.0)
 XML_LIBS = $(shell pkg-config --libs libxml-2.0)
+ZLIB_LIBS = -lz
 
 CXXFLAGS ?= ${GCC_FLAGS}
 CXXFLAGS += ${GTK_FLAGS} ${XML_FLAGS}
-LDFLAGS += ${GTK_LIBS} ${PTH_LIBS} ${XML_LIBS}
+LDFLAGS += ${GTK_LIBS} ${PTH_LIBS} ${XML_LIBS} ${ZLIB_LIBS}
 
 BINARY = gtkevemon
 SOURCES = pipedexec_posix.cc os_unix.cc
