@@ -2,16 +2,17 @@ CXX ?= g++
 
 CORES = $(shell grep processor /proc/cpuinfo | wc -l)
 
-GCC_FLAGS = -Wall -Wextra -ansi -Wcast-align -Wcast-qual -Wpointer-arith -Wundef -Wconversion -g # -pedantic
+GCC_FLAGS = -Wall -Wextra -ansi -Wcast-align -Wcast-qual -Wpointer-arith -Wundef -Wconversion -g -pedantic
 GTK_FLAGS = $(shell pkg-config --cflags gtkmm-2.4)
 GTK_LIBS = $(shell pkg-config --libs gtkmm-2.4)
 PTH_LIBS = -lpthread
 XML_FLAGS = $(shell pkg-config --cflags libxml-2.0)
 XML_LIBS = $(shell pkg-config --libs libxml-2.0)
+ZLIB_LIBS = -lz
 
 CXXFLAGS ?= ${GCC_FLAGS}
 CXXFLAGS += ${GTK_FLAGS} ${XML_FLAGS}
-LDFLAGS += ${GTK_LIBS} ${PTH_LIBS} ${XML_LIBS}
+LDFLAGS += ${GTK_LIBS} ${PTH_LIBS} ${XML_LIBS} ${ZLIB_LIBS}
 
 BINARY = gtkevemon
 SOURCES = pipedexec_posix.cc os_unix.cc
